@@ -7,6 +7,7 @@ __docformat__ = 'restructuredtext'
 import unittest
 import zc.buildout.tests
 import zc.buildout.testing
+import collective.recipe.backup
 from collective.recipe.backup import repozorunner
 from zope.testing import doctest, renormalizing
 
@@ -46,6 +47,21 @@ def test_suite():
                 ),
             doctest.DocTestSuite(
                 repozorunner,
+                setUp=setUp,
+                tearDown=zc.buildout.testing.buildoutTearDown,
+                optionflags=optionflags,
+                checker=renormalizing.RENormalizing([
+                        # If want to clean up the doctest output you
+                        # can register additional regexp normalizers
+                        # here. The format is a two-tuple with the RE
+                        # as the first item and the replacement as the
+                        # second item, e.g.
+                        # (re.compile('my-[rR]eg[eE]ps'), 'my-regexps')
+                        zc.buildout.testing.normalize_path,
+                                 ])
+                ),
+            doctest.DocTestSuite(
+                collective.recipe.backup,
                 setUp=setUp,
                 tearDown=zc.buildout.testing.buildoutTearDown,
                 optionflags=optionflags,
